--- a/discord_clone/public/index.html
+++ b/discord_clone/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- {# vue 개발 모드 CDN #} -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    
+    <!-- {# vue 프로덕션 CDN #} -->
+     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script> -->
   </head>
   <body>
     <noscript>
